Added sass files and global styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="build/css/styles.css">
 </head>
 <body>
-  <header class="mainHdr">
+  <header class="mainHdr container center">
     <section class="title">
       <h1>Meetup + Google Search</h1>
       <h3>Select the category you would like to search meetups for</h3>
@@ -55,11 +55,11 @@
     </section>
   </header>
 
-  <section class="map-holder">
+  <section class="map-holder center">
     <!-- GOOGLE MAP WILL GO HERE -->
   </section>
 
-  <section class="meetup-results">
+  <section class="meetup-results container center">
    <!-- MEETUP RESULTS WILL GO HERE -->
    <dl class="meetup-template">
       <a href="" target="_blank">
@@ -91,7 +91,7 @@
     </dl>
   </section>
 
-  <div class="template">
+  <div class="template hidden">
     <dl class="meetup-template">
       <a href="" target="_blank">
         <dt>Title</dt>
