Styled header section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="mainHdr container center">
     <section class="title">
       <h1>Meetup + Google Search</h1>
-      <h3>Select the category you would like to search meetups for</h3>
+      <h3>Select a category and watch nearby meetups get populated on Google maps!</h3>
     </section>
     <section class="form-holder">
       <form class="search-form">
