--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <option value="34">Tech</option>
           <option value="36">Writing</option>
         </select>
-        <input type="submit" value="Search">
+        <input class="submitBtn" type="submit" value="Search">
       </form>
     </section>
   </header>
