Added google map holder dimensions

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
   <section class="map-holder center">
     <!-- GOOGLE MAP WILL GO HERE -->
+    <div id="map">
+    </div>
   </section>
 
   <section class="meetup-results container center">
