--- a/index.html
+++ b/index.html
@@ -64,48 +64,41 @@
   <section class="meetup-results container center">
    <!-- MEETUP RESULTS WILL GO HERE -->
    <dl class="meetup-template">
-      <a href="" target="_blank">
-        <dt>Title</dt>
-          <dd class="title">Los Angeles Hiking Group</dd>
-        <dt>Members</dt>
-          <dd class="members">18962</dd><br/>
-        <dt>Organizer</dt>
-          <dd class='organizer'>barry craine</dd><br/>
-        <dt>About</dt>
-          <dd class="about"><p>Meet other people who are interested in hiking and walking for exercise, and attending various other fun events such as bicycling, kayaking, river rafting, etc. We sometimes have BBQs, sometimes have fundraisers, sometimes have parties and even go on exotic vacations....but mostly it is about hiking and having fun in the outdoors.&nbsp; You will find adventure on the various trails in the surrounding greater Los Angeles area which could even include downtown L.A. walks, or restaurants in other areas,&nbsp;with a varied leader mix of levels to choose from either beginners, intermediate and advanced hikers.</p>
-          <p>Any interest in volunteering for the Angeles National Forest....see more info on <a href="http://www.mtlowe.co">www.mtlowe.net</a></p>
-          </dd>
-      </a>
+      <dd class="title">
+        <a href="" target="_blank">Los Angeles Hiking Group</a>
+      </dd>
+      <dd class="members">18962 Members</dd><br/>
+      <dt class='organizer'>Organizer</dt>
+        <dd>barry craine</dd><br/>
+      <dt>About</dt>
+        <dd class="about"><p>Meet other people who are interested in hiking and walking for exercise, and attending various other fun events such as bicycling, kayaking, river rafting, etc. We sometimes have BBQs, sometimes have fundraisers, sometimes have parties and even go on exotic vacations....but mostly it is about hiking and having fun in the outdoors.&nbsp; You will find adventure on the various trails in the surrounding greater Los Angeles area which could even include downtown L.A. walks, or restaurants in other areas,&nbsp;with a varied leader mix of levels to choose from either beginners, intermediate and advanced hikers.</p>
+        <p>Any interest in volunteering for the Angeles National Forest....see more info on <a href="http://www.mtlowe.co">www.mtlowe.net</a></p>
+        </dd>
     </dl>
     <dl class="meetup-template">
-      <a href="" target="_blank">
-        <dt>Title</dt>
-          <dd class="title">Los Angeles Hiking Group</dd>
-        <dt>Members</dt>
-          <dd class="members">18962</dd><br/>
-        <dt>Organizer</dt>
-          <dd class='organizer'>barry craine</dd><br/>
-        <dt>About</dt>
-          <dd class="about"><p>Meet other people who are interested in hiking and walking for exercise, and attending various other fun events such as bicycling, kayaking, river rafting, etc. We sometimes have BBQs, sometimes have fundraisers, sometimes have parties and even go on exotic vacations....but mostly it is about hiking and having fun in the outdoors.&nbsp; You will find adventure on the various trails in the surrounding greater Los Angeles area which could even include downtown L.A. walks, or restaurants in other areas,&nbsp;with a varied leader mix of levels to choose from either beginners, intermediate and advanced hikers.</p>
-          <p>Any interest in volunteering for the Angeles National Forest....see more info on <a href="http://www.mtlowe.co">www.mtlowe.net</a></p>
-          </dd>
-      </a>
+      <dd class="title">
+        <a href="" target="_blank">Los Angeles Hiking Group</a>
+      </dd>
+      <dd class="members">18962 Members</dd><br/>
+      <dt class='organizer'>Organizer</dt>
+        <dd>barry craine</dd><br/>
+      <dt>About</dt>
+        <dd class="about"><p>Meet other people who are interested in hiking and walking for exercise, and attending various other fun events such as bicycling, kayaking, river rafting, etc. We sometimes have BBQs, sometimes have fundraisers, sometimes have parties and even go on exotic vacations....but mostly it is about hiking and having fun in the outdoors.&nbsp; You will find adventure on the various trails in the surrounding greater Los Angeles area which could even include downtown L.A. walks, or restaurants in other areas,&nbsp;with a varied leader mix of levels to choose from either beginners, intermediate and advanced hikers.</p>
+        <p>Any interest in volunteering for the Angeles National Forest....see more info on <a href="http://www.mtlowe.co">www.mtlowe.net</a></p>
+        </dd>
     </dl>
   </section>
 
   <div class="template hidden">
     <dl class="meetup-template">
-      <a href="" target="_blank">
-        <dt>Title</dt>
-          <dd class="title"></dd>
-        <dt>Members</dt>
-          <dd class="members"></dd><br/>
-        <dt>Organizer</dt>
-          <dd class='organizer'></dd><br/>
+        <dd class="title">
+          <a href="" target="_blank"></a>
+        </dd>
+        <dd class="members"></dd><br/>
+        <dt class='organizer'>Organizer</dt>
+          <dd></dd><br/>
         <dt>About</dt>
-          <dd class="about">
-          </dd>
-      </a>
+          <dd class="about"></dd>
     </dl>
   </div>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
