Added and styled footer section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
           <dd class="about"></dd>
     </dl>
   </div>
+
+  <footer class="foot center"> 
+    <a href="https://developers.google.com/maps/" target="_blank">Google API</a>
+    <a href="http://www.meetup.com/meetup_api/" target="_blank">Meetup API</a> 
+  </footer>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src='build/js/app.js'></script>
 </body>
