Added responsive styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="build/css/styles.css">
 </head>
 <body>
-  <header class="mainHdr container center">
+  <header class="mainHdr center">
     <section class="title">
       <h1>Meetup + Google Search</h1>
       <h3>Select a category and watch nearby meetups get populated on Google maps!</h3>
@@ -61,7 +61,7 @@
     </div>
   </section>
 
-  <section class="meetup-results container center">
+  <section class="meetup-results center">
    <!-- MEETUP RESULTS WILL GO HERE -->
    <dl class="meetup-template">
       <dd class="title">
