Added function to get user location

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
   <section class="map-holder center">
     <!-- GOOGLE MAP WILL GO HERE -->
+    <p class="error">Error message if any will go here</p>
     <div id="map">
     </div>
   </section>
@@ -107,6 +108,6 @@
     <a href="http://www.meetup.com/meetup_api/" target="_blank">Meetup API</a> 
   </footer>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script type="text/javascript" src='build/js/app.js'></script>
+    <script type="text/javascript" src='build/js/app.min.js'></script>
 </body>
 </html>
