--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <section class="map-holder center">
     <!-- GOOGLE MAP WILL GO HERE -->
-    <p class="error">Error message if any will go here</p>
+    <p class="error"></p>
     <div id="map">
     </div>
   </section>
@@ -108,6 +108,7 @@
     <a href="http://www.meetup.com/meetup_api/" target="_blank">Meetup API</a> 
   </footer>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script type="text/javascript" src='build/js/app.min.js'></script>
+  <script src="//maps.googleapis.com/maps/api/js"></script>
+  <script type="text/javascript" src='build/js/app.min.js'></script>
 </body>
 </html>
