--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <a href="" target="_blank"></a>
         </dd>
         <dd class="members"></dd><br/>
+        <dd class="label"></dd>
         <dt class='organizer'>Organizer</dt>
           <dd></dd><br/>
         <dt>About</dt>
