--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Google + Meetup Search</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="build/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="build/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="build/css/styles.min.css">
 </head>
 <body>
   <header class="mainHdr center">
@@ -84,7 +84,6 @@
     <a href="https://developers.google.com/maps/" target="_blank">Google API</a>
     <a href="http://www.meetup.com/meetup_api/" target="_blank">Meetup API</a> 
   </footer>
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="//maps.googleapis.com/maps/api/js"></script>
   <script type="text/javascript" src='build/js/app.min.js'></script>
 </body>
